add private courses
